# Cytomine-installer

./: .gitignore  pyproject.toml
.github/workflows/: code-quality.yaml  docker.yaml  test.yaml
docker/: Dockerfile
